[ADD]: front url env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,8 @@ app.security.jwt.expiration=24
 # a day in Millisecond
 #app.security.jwt.expiration=86400000
 
+app.client.frontend-url=${FRONT_CLIENT_URL}
+
 
 # ### PayPal
 app.paypal.api-base=${PAYPAL_API_BASE}
